# application-server

./: .gitignore  .travis.yml  CMakeLists.txt  CodeCoverage.cmake  Dockerfile  README.md  SERVER-0.1.1-Linux.deb  log.txt  preinstall_script.sh  readme.txt
db/: LOG  LOG.old
dev/: run
empty/: run
files/: example_profile_contacts_input.json  example_profile_conversation_input.json  example_profile_expertise_input.json  example_profile_friends_input.json  example_profile_others_recommendations_input.json  example_profile_own_recommendations_input.json  example_profile_personal_input.json  example_profile_picture_input.json  example_profile_skills_input.json  example_profile_solicitudes_input.json  example_profile_summary_input.json  url.txt
libs/: .gitignore
libs/mongoose/: .gitignore  CMakeLists.txt
src/: .gitignore  Attendant.cpp  Attendant.h  AttendantsHandler.cpp  AttendantsHandler.h  Authentication.cpp  Authentication.h  CMakeLists.txt  Constants.h  DataBase.cpp  DataBase.h  DataBaseAdministrator.cpp  DataBaseAdministrator.h  FirebaseService.cpp  FirebaseService.h  Logger.cpp  Logger.h  Mail.cpp  Mail.h  Profile.cpp  Profile.h  ProfileHandler.cpp  ProfileHandler.h  RegexMatcher.cpp  RegexMatcher.h  Request.cpp  Request.h  RequestAdministrator.cpp  RequestAdministrator.h  RequestParse.cpp  RequestParse.h  Response.cpp  Response.h  Sample.cpp  Server.cpp  Server.h  SharedService.cpp  SharedService.h  URLMapper.cpp  URLMapper.h  (+3 more)
test/: AllTests.cpp  CMakeLists.txt  TestAttendant.cpp  TestAttendantsHandler.cpp  TestDataBase.cpp  TestLogger.cpp  TestProfile.cpp  TestProfileHandler.cpp  TestSample.cpp  TestURLMapper.cpp  example_profile.json  example_profile_input.json  python_test.py
